--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
     <dependency>
     	<groupId>com.jfinal</groupId>
     	<artifactId>jfinal</artifactId>
